@@ -1,6 +1,13 @@
+2013-11-01  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * Source/GSAttributedString.m: Use exact equality test when removing
+        attribute dictionary from cache.  Prevents possibly removing the
+        wrong dictionary in cases where dictionary contents are mutated
+        while in the cache, such that two dictionaries become equal.
+
 2013-10-30  Richard Frith-Macdonald <rfm@gnu.org>
 
-        * Source/GSDictionary.m: Add priovate class GSCachedDictionary which
+        * Source/GSDictionary.m: Add private class GSCachedDictionary which
         will raise an exception if deallocated without being uncached.
         * Source/GSAttributedString.m: Use GSCachedDictionary for attributes
         to aid in detection of things improperly releasing them.
